<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="   Sign Up"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Username"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:visibility="visible"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="138dp" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_text"
            android:textCursorDrawable="@drawable/cursor_color"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:gravity="center"
            android:hint="@string/UsernameHintTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Email"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:visibility="visible"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="138dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_text"
            android:textCursorDrawable="@drawable/cursor_color"
            android:ems="10"
            android:hint="@string/EmailHintTxt"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Password"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="138dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_text"
            android:textCursorDrawable="@drawable/cursor_color"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/PasswordHintTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        >
        <Button
            android:id="@+id/signUpActivity_BTn_ID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/register_text"
            android:textColor="@color/white" />
        <LinearLayout
            android:id="@+id/linaelayout_signUp_txt_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_anccount_text"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                >

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn_text"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                >

            </TextView>


        </LinearLayout>
    </LinearLayout>







</LinearLayout>