<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

     <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
       android:layout_gravity="end"
        >
         <LinearLayout
             android:id="@+id/singUp_Layout_ID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_margin="10dp"
             android:gravity="end"
             android:layout_weight="1">



         </LinearLayout>
    </LinearLayout>

     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="2"
     android:orientation="vertical">


     <EditText
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:id="@+id/user_name_Edit_txt"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_weight=".4"
         android:background="@drawable/rounded_text"
         android:textCursorDrawable="@drawable/cursor_color"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/Email"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="307dp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight=".1">

     </TextView>
     <EditText
         android:id="@+id/Password_Edit_txt"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_weight=".4"
         android:gravity="center"
         android:background="@drawable/rounded_text"
         android:textCursorDrawable="@drawable/cursor_color"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:ems="10"
         android:hint="@string/Password"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="376dp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight=".3">

     </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_btn_ID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".37"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/button_style"
            android:text="@string/login_btn"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/gr" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight=".5">
            <TextView
                android:id="@+id/forgetPassword_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgetPassword_txt"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_weight=".5">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/layout_id_signup">
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dont_have_anccount_text"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:layout_marginRight="2dp"
                 >

             </TextView>
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/signUp_text"
                 android:gravity="center"
                 android:textSize="20dp"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 >

             </TextView>
         </LinearLayout>

       </LinearLayout>


        <ProgressBar
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:id="@+id/idLoadingPBlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">

     </TextView>

 </LinearLayout>

</LinearLayout>