<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.UploadMangaActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#256D85"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/settingButton_MangaID"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/white_new_cancel_asset" />


            <TextView
                android:id="@+id/logo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/uploadManga"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/select_language">

                </TextView>
                <RadioButton
                    android:id="@+id/arabic_radio"
                    android:layout_width="wrap_content"
                    android:text="@string/arabic"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="wrap_content">

                </RadioButton>
                <RadioButton
                    android:id="@+id/english_radio"
                    android:layout_width="wrap_content"
                    android:text="@string/english"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="wrap_content">

                </RadioButton>
                <EditText
                    android:id="@+id/book_title_id"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_text_new"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:textColorHint="@color/black"
                    android:gravity="center"
                    android:hint="@string/bookTitle"
                    android:visibility="visible" />
                <Spinner
                    android:id="@+id/spinner_generals"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_text_new"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/des_text">

                </TextView>
                <EditText
                    android:id="@+id/description_id"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/rounded_text_new"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black"
                    android:visibility="visible" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/thumbnail">

                </TextView>
                <ImageView
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="200dp"
                    android:background="@drawable/rounded_text_new"
                    android:src="@drawable/image_1000"
                    android:scaleType="fitXY"
                    android:layout_height="200dp">

                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="60dp">
                    <TextView
                        android:id="@+id/file_upload_id"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@drawable/rounded_text_new"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:gravity="center"
                        android:hint="@string/file_select"
                        android:visibility="visible" />
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/uploadfile"
                        android:layout_weight="1">

                    </ImageView>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp">

                </TextView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/login_btn_ID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/button_style"
            android:text="@string/upload"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/gr" />

    </LinearLayout>

</LinearLayout>