<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".Activities.ForgetPasswordActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:background="#256D85"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarFG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#256D85"
            android:minHeight="?attr/actionBarSize"
         >

            <ImageView
                android:id="@+id/settingButtonfg_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_arrow_36" />


            <TextView
                android:id="@+id/logo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgetPasswor_text_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_gravity="end"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:layout_marginRight="10dp"
                />


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/novelflix_logo" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/email_fg"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/loginImage"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor_color"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="307dp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginTop="20dp"
                    android:id="@+id/sendButton_ID"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/idLoadingPBforgetpasswordactivity"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/send_text"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2">
                <ProgressBar

                    android:id="@+id/progress_fg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>










        </LinearLayout>



    </com.google.android.material.appbar.AppBarLayout>

</LinearLayout>